--- a/udled/Cargo.toml
+++ b/udled/Cargo.toml
@@ -5,8 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-std = []
+default = []
+std = ["serde?/std"]
+serde = ["dep:serde"]
 
 
 [dependencies]
-unicode-segmentation = "1.10"
+unicode-segmentation = "1"
+serde = { version = "1", default-features = false, features = [
+    "derive",
+], optional = true }
