--- a/udled/Cargo.toml
+++ b/udled/Cargo.toml
@@ -2,8 +2,11 @@
 name = "udled"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+keywords = ["parser", "lexer"]
+categories = ["parsing", "no-std"]
+authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 default = []
 std = ["serde?/std"]
