--- a/udled/Cargo.toml
+++ b/udled/Cargo.toml
@@ -6,6 +6,8 @@ license = "MIT OR Apache-2.0"
 keywords = ["parser", "lexer"]
 categories = ["parsing", "no-std"]
 authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
+repository = "https://github.com/kildevaeld/udled-rs"
+readme = "README.md"
 
 [features]
 default = []
