--- a/udled/Cargo.toml
+++ b/udled/Cargo.toml
@@ -8,6 +8,7 @@ categories = ["parsing", "no-std"]
 authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
 repository = "https://github.com/kildevaeld/udled-rs"
 readme = "README.md"
+description = "Tokenizer and parser"
 
 [features]
 default = []
