--- a/udled/Cargo.toml
+++ b/udled/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "udled"
 version = "0.1.0"
-edition = "2021"
-license = "MIT OR Apache-2.0"
-keywords = ["parser", "lexer"]
-categories = ["parsing", "no-std"]
-authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
-repository = "https://github.com/kildevaeld/udled-rs"
+
+edition.worksaoce = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
+authors.workspace = true
+repository.workspace = true
+
 readme = "README.md"
 description = "Tokenizer and parser"
 
