--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,12 @@
 
 resolver = "2"
 
-
 members = ["udled", "udled-helpers"]
+
+[workspace.package]
+edition = "2021"
+keywords = ["parser", "lexer"]
+categories = ["parsing", "no-std"]
+authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
+repository = "https://github.com/kildevaeld/udled-rs"
+license = "MIT"
