--- a/udled/Cargo.toml
+++ b/udled/Cargo.toml
@@ -2,7 +2,7 @@
 name = "udled"
 version = "0.1.0"
 
-edition.worksaoce = true
+edition.workspace = true
 license.workspace = true
 keywords.workspace = true
 categories.workspace = true
