--- a/udled-lexers/Cargo.toml
+++ b/udled-lexers/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "udled-helpers"
-version = "0.1.0"
+name = "udled-lexers"
+version = "0.0.1"
 
 edition.workspace = true
 license.workspace = true
