--- a/udled-tokenizers/Cargo.toml
+++ b/udled-tokenizers/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "udled-lexers"
+name = "udled-tokenizers"
 version = "0.0.1"
 
 edition.workspace = true
@@ -13,4 +13,4 @@ readme = "README.md"
 description = "Tokenizers for udled"
 
 [dependencies]
-udled = { path = "../udled", version = "0.1" }
+udled = { path = "../udled", version = "0.1.0" }
