--- a/udled/Cargo.toml
+++ b/udled/Cargo.toml
@@ -16,6 +16,7 @@ description = "Tokenizer and parser"
 default = []
 std = ["serde?/std"]
 serde = ["dep:serde"]
+macros = ["udled-macros"]
 
 
 [dependencies]
@@ -23,3 +24,4 @@ unicode-segmentation = "1"
 serde = { version = "1", default-features = false, features = [
     "derive",
 ], optional = true }
+udled-macros = { path = "../udled-macros", version = "0.1.0", optional = true }
