--- a/udled/Cargo.toml
+++ b/udled/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "udled"
-version = "0.3.1"
+version = "0.4.0"
 
 edition.workspace = true
 license.workspace = true
@@ -8,6 +8,7 @@ keywords.workspace = true
 categories.workspace = true
 authors.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 
 readme = "README.md"
 description = "Tokenizer and parser"
