--- a/udled-tokenizers/Cargo.toml
+++ b/udled-tokenizers/Cargo.toml
@@ -1,23 +1,13 @@
 [package]
 name = "udled-tokenizers"
-version = "0.3.0"
-
+version = "0.4.0"
 edition.workspace = true
-license.workspace = true
 keywords.workspace = true
 categories.workspace = true
 authors.workspace = true
 repository.workspace = true
-
-readme = "README.md"
-description = "Tokenizers for udled"
-
-[features]
-serde = ["dep:serde"]
+license.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-unicode-segmentation = "1"
-udled = { path = "../udled", version = "0.4" }
-serde = { version = "1", default-features = false, features = [
-    "derive",
-], optional = true }
+udled = { path = "../udled" }
