--- a/udled/Cargo.toml
+++ b/udled/Cargo.toml
@@ -11,6 +11,8 @@ rust-version.workspace = true
 
 [features]
 serde = ["dep:serde"]
+macros = ["udled-macros"]
 
 [dependencies]
+udled-macros = { path = "../udled-macros", optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
