--- a/udled/Cargo.toml
+++ b/udled/Cargo.toml
@@ -19,3 +19,8 @@ macros = ["udled-macros"]
 udled-macros = { path = "../udled-macros", optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
 byteorder = { version = "1", optional = true }
+
+
+[dev-dependencies]
+geo-types = { version = "*" }
+geo-traits = { version = "*" }
