--- a/udled-macros/Cargo.toml
+++ b/udled-macros/Cargo.toml
@@ -9,7 +9,7 @@ repository.workspace = true
 license.workspace = true
 
 
-description = "Macros for audiens"
+description = "Macros for udled"
 
 [lib]
 proc-macro = true
