--- a/udled-tokenizers/Cargo.toml
+++ b/udled-tokenizers/Cargo.toml
@@ -10,4 +10,4 @@ license.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-udled = { path = "../udled" }
+udled = { path = "../udled", version = "0.6" }
