--- a/geom/Cargo.toml
+++ b/geom/Cargo.toml
@@ -9,8 +9,13 @@ repository.workspace = true
 license.workspace = true
 rust-version.workspace = true
 
+[features]
+default = ["geo-types"]
+geo-types = ["dep:geo-types", "dep:geo-traits"]
+
 [dependencies]
 udled = { path = "../udled", features = ["binary"] }
-geo-types = { version = "0.7" }
-geo-traits = { version = "0.3" }
+geo-types = { version = "0.7", optional = true }
+geo-traits = { version = "0.3", optional = true }
 byteorder = { version = "1" }
+geozero = { version = "0.14", features = ["with-wkb"] }
