--- a/geom/Cargo.toml
+++ b/geom/Cargo.toml
@@ -10,12 +10,11 @@ license.workspace = true
 rust-version.workspace = true
 
 [features]
-default = ["geo-types"]
-geo-types = ["dep:geo-types", "dep:geo-traits"]
+geo-types = ["dep:geo-traits"]
 
 [dependencies]
 udled = { path = "../udled", features = ["binary"] }
-geo-types = { version = "0.7", optional = true }
+udled-tokenizers = { path = "../udled-tokenizers" }
+
 geo-traits = { version = "0.3", optional = true }
 byteorder = { version = "1" }
-geozero = { version = "0.14", features = ["with-wkb"] }
