--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 resolver = "3"
 
-members = ["udled-macros", "udled", "udled-tokenizers", "geom"]
+members = ["udled-macros", "udled", "udled-tokenizers"]
 
 
 [workspace.package]
